--- a/PackmanGame/CMakeLists.txt
+++ b/PackmanGame/CMakeLists.txt
@@ -17,7 +17,7 @@ link_directories(${GLEW_LIB_PATH} ${GLFW_LIB_PATH} ${BOOST_LIB_PATH})
 find_package(OpenGL REQUIRED)
 set(OpenGL_GL_REFERENCE "GLVND")
 
-set(src "main.cpp" "Shader.cpp" "ShaderProgram.cpp")
+set(src "main.cpp" GameModel.cpp GameModel.h Renderer.cpp Renderer.h)
 
 add_executable (PackmanGame ${src})
 
